tests/specs/run/unstable/temporal.out
error: Uncaught (in promise) ReferenceError: Temporal is not defined
Temporal.Now.instant();
^
    at [WILDCARD]temporal.ts:1:1

    info: Temporal is an unstable API.
    hint: Run again with `--unstable-temporal` flag to enable this API.
